started to add all the content

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>THe Establishment Wellington</title>
+        <title>The Establishment Wellington</title>
 
         <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-
-        <div class="homeImg bgSize overflow">
 
         <nav class="navBar">
             <ul class="navList">
@@ -19,13 +18,46 @@
             </ul>
         </nav>
 
+        <div class="homeImg homeImgSize overflow flexArrow">
+
+            <div class="downArrow">&#8681;</div>
+
         </div>
 
+        <div class="backgroundColor">
+            <h2 class="mainHeading">LEARN SOMETHING ABOUT US</h2>
+
+            <p class="pText">
+                The Establishment Bar and Restaurant is in the heart of Wellington City right on Courtney Place. We offer a wide range of classic and new exciting drinks and meals to match all at excellent prices. The Establishment likes to hosts all sorts of events from Product Launches, Club Nights, Corporate and Birthday Functions plus a variety more.
+            </p>
+
+            <br/>
+
+            <h2 class="mainHeading">SEE OUR WEEKLY EVENTS</h2>
+            <h3 class="subHeading">MONDAY <button class="plusButton" type="button" name="button">&#43;</button></h3>
+
+            <h3>TUESDAY</h3>
+
+            <h3>WEDNESDAY</h3>
+
+            <h3>THURSDAY</h3>
+
+            <h3>FRIDAY</h3>
+
+            <h3>SATURDAY</h3>
+
+            <h3>SUNDAY</h3>
 
 
 
 
 
+
+
+
+
+
+        </div>
 
     </body>
 </html>
