got a decent start layout

--- a/index.html
+++ b/index.html
@@ -24,34 +24,43 @@
 
         </div>
 
-        <div class="backgroundColor">
+        <div class="containerFull">
+
+
             <h2 class="mainHeading">LEARN SOMETHING ABOUT US</h2>
 
-            <p class="pText">
-                The Establishment Bar and Restaurant is in the heart of Wellington City right on Courtney Place. We offer a wide range of classic and new exciting drinks and meals to match all at excellent prices. The Establishment likes to hosts all sorts of events from Product Launches, Club Nights, Corporate and Birthday Functions plus a variety more.
-            </p>
+            <div class="row borderBox floatLeft">
+            <div class="col12 colL6 containerL">
+                <p class="pText">
+                    The Establishment Bar and Restaurant is in the heart of Wellington City right on Courtney Place. We offer a wide range of classic and new exciting drinks and meals to match all at excellent prices. The Establishment likes to hosts all sorts of events from Product Launches, Club Nights, Corporate and Birthday Functions plus a variety more.
+                </p>
 
-            <br/>
+                <img src="images/boysInBar.jpeg" alt="" class="colL6 floatRight boysInBarImg">
+
+            </div>
+            </div>
+
+
+
 
             <h2 class="mainHeading">SEE OUR WEEKLY EVENTS</h2>
-            <h3 class="subHeading">MONDAY <button class="plusButton" type="button" name="button">&#43;</button></h3>
 
-            <h3>TUESDAY</h3>
+            <div class="floatLeft">
+                <h3 class="subHeading">MONDAY <button class="plusButton" type="button" name="button">&#43;</button></h3>
 
-            <h3>WEDNESDAY</h3>
+                <h3>TUESDAY</h3>
 
-            <h3>THURSDAY</h3>
+                <h3>WEDNESDAY</h3>
 
-            <h3>FRIDAY</h3>
+                <h3>THURSDAY</h3>
 
-            <h3>SATURDAY</h3>
+                <h3>FRIDAY</h3>
 
-            <h3>SUNDAY</h3>
+                <h3>SATURDAY</h3>
 
+                <h3>SUNDAY</h3>
 
-
-
-
+            </div>
 
 
 
