started on monday event being responsive

--- a/index.html
+++ b/index.html
@@ -45,22 +45,68 @@
 
             <h2 class="mainHeading">SEE OUR WEEKLY EVENTS</h2>
 
-            <div class="floatLeft">
-                <h3 class="subHeading">MONDAY <button class="plusButton" type="button" name="button">&#43;</button></h3>
+            <div class="row floatLeft weeklyEventBox">
 
-                <h3>TUESDAY</h3>
+              <div class="col12 colM6 containerL">
+                    <h3 class="subHeading floatLeft">MONDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
 
-                <h3>WEDNESDAY</h3>
+              <div class="floatLeft eventInfo ">
+                    <p class="pText">
+                        Quiz Night with giveaways including vouchers for food and drinks, starts at 7pm. Happy Hour from 5pm-7pm.
+                    </p>
+                    <img src="images/fadedDrinks.jpg" alt="" class="eventImgs floatRight">
+              </div>
+              </div>
 
-                <h3>THURSDAY</h3>
 
-                <h3>FRIDAY</h3>
 
-                <h3>SATURDAY</h3>
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">TUESDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
 
-                <h3>SUNDAY</h3>
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">WEDNESDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
+
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">THURSDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
+
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">FRIDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
+
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">SATURDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
+
+              <div class="col12 colM6">
+                    <h3 class="subHeading floatLeft">SUNDAY</h3>
+              <div class="plusButtonFlex">
+                    <div class="plusButton floatRight">&#43;</div>
+              </div>
+              </div>
 
             </div>
+
 
 
 
